# mw-streamer

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake  FindFFmpeg.cmake  FindSRT.cmake
examples/: CMakeLists.txt  cuda_processor_example.cpp  transcode_example.cpp  version_example.cpp
include/mw/: init.hpp
include/mw/convter/: ZlmCodecParametersConvter.h  ZlmPacketConvter.h
include/mw/init/: init.hpp
include/mw/log/: logging.hpp
include/mw/streamer/: pipeline.h  pipeline_config.h  processor.h  status.h  version.h
include/mw/streamer/ffmpeg/: buffer_ref.h  channel_layout.h  codec_context.h  codec_parameters.h  dictionary.h  frame.h  input_format_context.h  output_format_context.h  packet.h  swr_context.h
include/mw/streamer/internal/: aac_encoder.h  aligned_audio_buffer.h  audio_auto_decoder.h  audio_converter.h  audio_fifo.h  compressed_packet_delay_buffer.h  cuda_device_context.h  demuxer.h  fragmented_mp4_muxer.h  gpu_frame_utils.h  gpu_nv12_frame_pool.h  input_mode.h  input_options.h  network_muxer.h  nv_decoder.h  nv_encoder.h  output_worker.h  pipeline_config_validator.h  processor.h  processor_context.h  standby_image.h  stream_info.h  video_color.h  video_synchronizer.h
include/mw/streamer/internal/common/: blocking_queue.h  error.h  ffmpeg_interrupt.h  ffmpeg_log.h  reconnect_backoff.h  timestamp.h
src/: init.cpp  logging.cpp  pipeline.cpp  status.cpp  version.cpp
src/convter/: ZlmCodecParametersConvter.cpp  ZlmPacketConvter.cpp
src/ffmpeg/: buffer_ref.cpp  channel_layout.cpp  codec_context.cpp  codec_parameters.cpp  dictionary.cpp  frame.cpp  input_format_context.cpp  output_format_context.cpp  packet.cpp  swr_context.cpp
src/init/: init.cpp
src/internal/: aac_encoder.cpp  aligned_audio_buffer.cpp  audio_auto_decoder.cpp  audio_converter.cpp  audio_fifo.cpp  compressed_packet_delay_buffer.cpp  cuda_device_context.cpp  demuxer.cpp  fragmented_mp4_muxer.cpp  gpu_frame_utils.cpp  gpu_nv12_frame_pool.cpp  input_mode.cpp  input_options.cpp  network_muxer.cpp  nv_decoder.cpp  nv_encoder.cpp  output_worker.cpp  pipeline_config_validator.cpp  processor_context.cpp  standby_image.cpp  video_color.cpp  video_synchronizer.cpp
src/internal/common/: error.cpp  ffmpeg_interrupt.cpp  ffmpeg_log.cpp  reconnect_backoff.cpp  timestamp.cpp
src/log/: logging.cpp
src/processor/: processor.cpp
tests/: CMakeLists.txt  aac_encoder_test.cpp  aligned_audio_buffer_test.cpp  audio_auto_decoder_integration_test.cpp  audio_converter_test.cpp  audio_fifo_test.cpp  blocking_queue_test.cpp  compressed_packet_delay_buffer_test.cpp  demuxer_integration_test.cpp  error_test.cpp  ffmpeg_cuda_smoke_test.cpp  ffmpeg_interrupt_test.cpp  ffmpeg_log_test.cpp  ffmpeg_raii_test.cpp  file_player_test.cpp  fragmented_mp4_muxer_integration_test.cpp  fragmented_mp4_muxer_test.cpp  init_test.cpp  input_mode_test.cpp  input_options_test.cpp  logging_test.cpp  network_muxer_integration_test.cpp  network_muxer_test.cpp  nv_decoder_integration_test.cpp  nv_encoder_integration_test.cpp  output_worker_integration_test.cpp  output_worker_test.cpp  pipeline_config_test.cpp  pipeline_file_e2e_test.cpp  pipeline_test.cpp  processor_c_header_test.c  processor_context_test.cpp  processor_test.cpp  reconnect_backoff_test.cpp  srt_init_test.cpp  standby_image_cpu_integration_test.cpp  standby_image_gpu_integration_test.cpp  status_test.cpp  timestamp_test.cpp  version_test.cpp  (+3 more)
tests/data/: README.md  h264_1s_aac_3s.m3u8  h264_1s_aac_3s.ts  h264_aac_mono_44100_1s.m3u8  vp8_video.ivf  vp9_video.ivf
